<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.example.guess.Login" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
	<ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
        	android:layout_alignParentRight="true"
        	android:layout_marginTop="20dp"
        	android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/login_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
    
    <com.parse.ParseImageView
        android:id="@+id/userProfilePic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/logo"
         />
    
    <!-- <ImageView 
        android:id="@+id/userProfilePic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" /> -->
 

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >
            
            <LinearLayout
                android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:orientation="horizontal">
            	<Button
                android:id="@+id/uploadPhoto_button"
                style="?metaButtonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/uploadPhoto_button" />
            	<Button
                android:id="@+id/takePhoto_button"
                style="?metaButtonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/takePhoto_button" />
            	</LinearLayout>
            
            <Button
                android:id="@+id/start_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_button" />

            <Button
                android:id="@+id/login_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button" />
            <Button
                android:id="@+id/logout_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_button" />
            <Button
                android:id="@+id/updateParse_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateParse_button" />
        </LinearLayout>

        

    </FrameLayout>

</RelativeLayout>
